--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       - "80:5000"
     depends_on:
       - my_db:
-        condition: service_healthy 
+        condition: "service_healthy "
 
   my_db:
     image: mongo:4.2
