--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,8 +7,8 @@ services:
     ports:
       - "80:5000"
     depends_on:
-      my_db:
-        condition: service_healthy 
+      - my_db
+        # condition: service_healthy 
 
   my_db:
     image: mongo:4.2
