--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '2'
+version: '3'
 services:
   app_comp:
     build: ./app/
@@ -6,9 +6,9 @@ services:
     #   APP_PORT: "80"
     ports:
       - "80:5000"
-    # depends_on:
-    #   my_db:
-    #     condition: service_healthy 
+    depends_on:
+      my_db:
+        condition: service_healthy 
 
   my_db:
     image: mongo:4.2
@@ -21,11 +21,11 @@ services:
       - "27017:27017" 
     volumes:
       - data:/data/db
-    # healthcheck:
-    #   test: ["CMD", "mongo", "--eval","db.runCommand({ping:1}).ok"]
-    #   interval: 10s
-    #   timeout: 5s
-    #   retries: 5
+    healthcheck:
+      test: ["CMD", "mongo", "--eval","db.runCommand({ping:1}).ok"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 
 volumes:
