--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -9,7 +9,7 @@ services:
     
   
   app_comp:
-    build: ./app/
+    image: http://644435390668.dkr.ecr.eu-west-3.amazonaws.com/freedivingcompetitions:${VERSION_COMP}
     # environment:
     #   APP_PORT: "80"
     # ports:
