test push to ecr

--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -3,13 +3,13 @@ services:
   proxy:
       build: ./nginx2
       ports:
-          - "5001:80"
+          - "80:80"
       depends_on:
         - app_comp
     
   
   app_comp:
-    image: http://644435390668.dkr.ecr.eu-west-3.amazonaws.com/freedivingcompetitions:${VERSION_COMP}
+    image: 644435390668.dkr.ecr.eu-west-3.amazonaws.com/freedivingcompetitions:${VERSION_COMP}
     # environment:
     #   APP_PORT: "80"
     # ports:
