--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -4,6 +4,8 @@ services:
       build: ./nginx2
       ports:
           - "80:80"
+      volumes:
+       - ./app/templates:/usr/share/nginx/html/static
       depends_on:
         - app_comp
     
