--- a/nginx2/Dockerfile
+++ b/nginx2/Dockerfile
@@ -1,3 +1,4 @@
 FROM nginx
 RUN rm /etc/nginx/conf.d/default.conf
 COPY nginx1.conf /etc/nginx/conf.d/default.conf
+# COPY ../app/templates/ /usr/share/nginx/html/templates
