--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -6,16 +6,17 @@ services:
           - "80:80"
       volumes:
        - ./templates:/usr/share/nginx/html/static
+      networks:
+      - for_app
       depends_on:
         - app_comp
     
   
   app_comp:
     image: 644435390668.dkr.ecr.eu-west-3.amazonaws.com/freedivingcompetitions:${VERSION_COMP}
-    # environment:
-    #   APP_PORT: "80"
-    # ports:
-    #   - "5001:5000"
+    networks:
+      - for_app 
+      - for_db
     depends_on:
       my_db:
         condition: service_healthy 
@@ -31,6 +32,8 @@ services:
       - "27017:27017" 
     volumes:
       - data:/data/db
+    networks:
+      - for_db
     healthcheck:
       test: ["CMD", "mongo", "--eval","db.runCommand({ping:1}).ok"]
       interval: 10s
@@ -42,7 +45,6 @@ volumes:
   data:
     driver: local
 
-# networks:
-#   default:
-#     name: ${NETWORK}
-#     external: true
+networks:
+  for_app:
+  for_db:
